mylangParser.py
# Generated from parser/mylang.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class mylangParser ( Parser ):

    grammarFileName = "mylang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"'return'", u"','", 
                     u"'def'", u"':'", u"'='", u"'+'", u"'-'", u"'*'", u"'/'", 
                     u"'>'", u"'>='", u"'=='", u"'<'", u"'<='", u"'and'", 
                     u"'or'", u"'not'", u"'print'", u"'if'", u"'elif'", 
                     u"'else'", u"'while'", u"'pass'", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'\t'", u"'\n'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"PASS", u"BOOL", u"ID", u"INT", u"WS", 
                      u"STRING", u"CHAR", u"TAB", u"ENDL" ]

    RULE_program = 0
    RULE_explist = 1
    RULE_expression = 2
    RULE_function_call = 3
    RULE_literal = 4
    RULE_return = 5
    RULE_argument = 6
    RULE_arglist = 7
    RULE_idlist = 8
    RULE_function = 9
    RULE_assignment = 10
    RULE_arithmetic = 11
    RULE_relational = 12
    RULE_logical = 13
    RULE_print = 14
    RULE_if_then_else = 15
    RULE_while = 16
    RULE_truth_val = 17
    RULE_tabs = 18
    RULE_endls = 19

    ruleNames =  [ u"program", u"explist", u"expression", u"function_call", 
                   u"literal", u"return", u"argument", u"arglist", u"idlist", 
                   u"function", u"assignment", u"arithmetic", u"relational", 
                   u"logical", u"print", u"if_then_else", u"while", u"truth_val", 
                   u"tabs", u"endls" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    PASS=25
    BOOL=26
    ID=27
    INT=28
    WS=29
    STRING=30
    CHAR=31
    TAB=32
    ENDL=33

    def __init__(self, input, output=sys.stdout):
        super(mylangParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(mylangParser.ExplistContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = mylangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.explist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExplistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ExplistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def tabs(self):
            return self.getTypedRuleContext(mylangParser.TabsContext,0)


        def expression(self):
            return self.getTypedRuleContext(mylangParser.ExpressionContext,0)


        def explist(self):
            return self.getTypedRuleContext(mylangParser.ExplistContext,0)


        def endls(self):
            return self.getTypedRuleContext(mylangParser.EndlsContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_explist

        def enterRule(self, listener):
            if hasattr(listener, "enterExplist"):
                listener.enterExplist(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExplist"):
                listener.exitExplist(self)




    def explist(self):

        localctx = mylangParser.ExplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_explist)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.tabs()
                self.state = 43
                self.expression()
                self.state = 44
                self.explist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.endls()
                self.state = 47
                self.explist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(mylangParser.Function_callContext,0)


        def assignment(self):
            return self.getTypedRuleContext(mylangParser.AssignmentContext,0)


        def function(self):
            return self.getTypedRuleContext(mylangParser.FunctionContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(mylangParser.ArithmeticContext,0)


        def relational(self):
            return self.getTypedRuleContext(mylangParser.RelationalContext,0)


        def logical(self):
            return self.getTypedRuleContext(mylangParser.LogicalContext,0)


        def print(self):
            return self.getTypedRuleContext(mylangParser.PrintContext,0)


        def if_then_else(self):
            return self.getTypedRuleContext(mylangParser.If_then_elseContext,0)


        def while(self):
            return self.getTypedRuleContext(mylangParser.WhileContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_expression

        def enterRule(self, listener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)




    def expression(self):

        localctx = mylangParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.function_call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.function()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.arithmetic()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.relational()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.logical()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.print()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 59
                self.if_then_else()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 60
                self.while()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.Function_callContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mylangParser.ID, 0)

        def arglist(self):
            return self.getTypedRuleContext(mylangParser.ArglistContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_function_call

        def enterRule(self, listener):
            if hasattr(listener, "enterFunction_call"):
                listener.enterFunction_call(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunction_call"):
                listener.exitFunction_call(self)




    def function_call(self):

        localctx = mylangParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(mylangParser.ID)
            self.state = 64
            self.match(mylangParser.T__0)
            self.state = 65
            self.arglist()
            self.state = 66
            self.match(mylangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.LiteralContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(mylangParser.STRING, 0)

        def CHAR(self):
            return self.getToken(mylangParser.CHAR, 0)

        def INT(self):
            return self.getToken(mylangParser.INT, 0)

        def BOOL(self):
            return self.getToken(mylangParser.BOOL, 0)

        def getRuleIndex(self):
            return mylangParser.RULE_literal

        def enterRule(self, listener):
            if hasattr(listener, "enterLiteral"):
                listener.enterLiteral(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLiteral"):
                listener.exitLiteral(self)




    def literal(self):

        localctx = mylangParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << mylangParser.BOOL) | (1 << mylangParser.INT) | (1 << mylangParser.STRING) | (1 << mylangParser.CHAR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ReturnContext, self).__init__(parent, invokingState)
            self.parser = parser

        def arglist(self):
            return self.getTypedRuleContext(mylangParser.ArglistContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_return

        def enterRule(self, listener):
            if hasattr(listener, "enterReturn"):
                listener.enterReturn(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitReturn"):
                listener.exitReturn(self)




    def return(self):

        localctx = mylangParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(mylangParser.T__2)
            self.state = 71
            self.arglist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ArgumentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mylangParser.ID, 0)

        def literal(self):
            return self.getTypedRuleContext(mylangParser.LiteralContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_argument

        def enterRule(self, listener):
            if hasattr(listener, "enterArgument"):
                listener.enterArgument(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArgument"):
                listener.exitArgument(self)




    def argument(self):

        localctx = mylangParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argument)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mylangParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(mylangParser.ID)
                pass
            elif token in [mylangParser.BOOL, mylangParser.INT, mylangParser.STRING, mylangParser.CHAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArglistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ArglistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def arglist(self):
            return self.getTypedRuleContext(mylangParser.ArglistContext,0)


        def argument(self):
            return self.getTypedRuleContext(mylangParser.ArgumentContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_arglist

        def enterRule(self, listener):
            if hasattr(listener, "enterArglist"):
                listener.enterArglist(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArglist"):
                listener.exitArglist(self)




    def arglist(self):

        localctx = mylangParser.ArglistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arglist)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(mylangParser.T__3)
                self.state = 78
                self.arglist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.argument()
                self.state = 80
                self.arglist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.IdlistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(mylangParser.IdlistContext,0)


        def ID(self):
            return self.getToken(mylangParser.ID, 0)

        def getRuleIndex(self):
            return mylangParser.RULE_idlist

        def enterRule(self, listener):
            if hasattr(listener, "enterIdlist"):
                listener.enterIdlist(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIdlist"):
                listener.exitIdlist(self)




    def idlist(self):

        localctx = mylangParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idlist)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mylangParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(mylangParser.T__3)
                self.state = 86
                self.idlist()
                pass
            elif token in [mylangParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(mylangParser.ID)
                self.state = 88
                self.idlist()
                pass
            elif token in [mylangParser.T__1, mylangParser.T__6]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.FunctionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def tabs(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(mylangParser.TabsContext)
            else:
                return self.getTypedRuleContext(mylangParser.TabsContext,i)


        def ID(self):
            return self.getToken(mylangParser.ID, 0)

        def idlist(self):
            return self.getTypedRuleContext(mylangParser.IdlistContext,0)


        def endls(self):
            return self.getTypedRuleContext(mylangParser.EndlsContext,0)


        def explist(self):
            return self.getTypedRuleContext(mylangParser.ExplistContext,0)


        def return(self):
            return self.getTypedRuleContext(mylangParser.ReturnContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_function

        def enterRule(self, listener):
            if hasattr(listener, "enterFunction"):
                listener.enterFunction(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunction"):
                listener.exitFunction(self)




    def function(self):

        localctx = mylangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.tabs()
            self.state = 93
            self.match(mylangParser.T__4)
            self.state = 94
            self.match(mylangParser.ID)
            self.state = 95
            self.match(mylangParser.T__0)
            self.state = 96
            self.idlist()
            self.state = 97
            self.match(mylangParser.T__1)
            self.state = 98
            self.match(mylangParser.T__5)
            self.state = 99
            self.endls()
            self.state = 100
            self.explist()
            self.state = 101
            self.tabs()
            self.state = 102
            self.return()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(mylangParser.IdlistContext,0)


        def ID(self):
            return self.getToken(mylangParser.ID, 0)

        def literal(self):
            return self.getTypedRuleContext(mylangParser.LiteralContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(mylangParser.ArithmeticContext,0)


        def relational(self):
            return self.getTypedRuleContext(mylangParser.RelationalContext,0)


        def logical(self):
            return self.getTypedRuleContext(mylangParser.LogicalContext,0)


        def function_call(self):
            return self.getTypedRuleContext(mylangParser.Function_callContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_assignment

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = mylangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.idlist()
            self.state = 105
            self.match(mylangParser.T__6)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 106
                self.match(mylangParser.ID)
                pass

            elif la_ == 2:
                self.state = 107
                self.literal()
                pass

            elif la_ == 3:
                self.state = 108
                self.arithmetic()
                pass

            elif la_ == 4:
                self.state = 109
                self.relational()
                pass

            elif la_ == 5:
                self.state = 110
                self.logical()
                pass

            elif la_ == 6:
                self.state = 111
                self.function_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArithmeticContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.ArithmeticContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(mylangParser.ID)
            else:
                return self.getToken(mylangParser.ID, i)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(mylangParser.INT)
            else:
                return self.getToken(mylangParser.INT, i)

        def getRuleIndex(self):
            return mylangParser.RULE_arithmetic

        def enterRule(self, listener):
            if hasattr(listener, "enterArithmetic"):
                listener.enterArithmetic(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArithmetic"):
                listener.exitArithmetic(self)




    def arithmetic(self):

        localctx = mylangParser.ArithmeticContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arithmetic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not(_la==mylangParser.ID or _la==mylangParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << mylangParser.T__7) | (1 << mylangParser.T__8) | (1 << mylangParser.T__9) | (1 << mylangParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==mylangParser.ID or _la==mylangParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.RelationalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(mylangParser.ID)
            else:
                return self.getToken(mylangParser.ID, i)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(mylangParser.INT)
            else:
                return self.getToken(mylangParser.INT, i)

        def getRuleIndex(self):
            return mylangParser.RULE_relational

        def enterRule(self, listener):
            if hasattr(listener, "enterRelational"):
                listener.enterRelational(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRelational"):
                listener.exitRelational(self)




    def relational(self):

        localctx = mylangParser.RelationalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_relational)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==mylangParser.ID or _la==mylangParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 119
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << mylangParser.T__11) | (1 << mylangParser.T__12) | (1 << mylangParser.T__13) | (1 << mylangParser.T__14) | (1 << mylangParser.T__15))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 120
            _la = self._input.LA(1)
            if not(_la==mylangParser.ID or _la==mylangParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.LogicalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(mylangParser.ID)
            else:
                return self.getToken(mylangParser.ID, i)

        def BOOL(self, i=None):
            if i is None:
                return self.getTokens(mylangParser.BOOL)
            else:
                return self.getToken(mylangParser.BOOL, i)

        def relational(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(mylangParser.RelationalContext)
            else:
                return self.getTypedRuleContext(mylangParser.RelationalContext,i)


        def getRuleIndex(self):
            return mylangParser.RULE_logical

        def enterRule(self, listener):
            if hasattr(listener, "enterLogical"):
                listener.enterLogical(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLogical"):
                listener.exitLogical(self)




    def logical(self):

        localctx = mylangParser.LogicalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logical)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mylangParser.BOOL, mylangParser.ID, mylangParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.match(mylangParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 123
                    self.match(mylangParser.BOOL)
                    pass

                elif la_ == 3:
                    self.state = 124
                    self.relational()
                    pass


                self.state = 127
                _la = self._input.LA(1)
                if not(_la==mylangParser.T__16 or _la==mylangParser.T__17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 131
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 128
                    self.match(mylangParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 129
                    self.match(mylangParser.BOOL)
                    pass

                elif la_ == 3:
                    self.state = 130
                    self.relational()
                    pass


                pass
            elif token in [mylangParser.T__18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(mylangParser.T__18)
                self.state = 137
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 134
                    self.match(mylangParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 135
                    self.match(mylangParser.BOOL)
                    pass

                elif la_ == 3:
                    self.state = 136
                    self.relational()
                    pass


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.PrintContext, self).__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(mylangParser.ArgumentContext,0)


        def getRuleIndex(self):
            return mylangParser.RULE_print

        def enterRule(self, listener):
            if hasattr(listener, "enterPrint"):
                listener.enterPrint(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrint"):
                listener.exitPrint(self)




    def print(self):

        localctx = mylangParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(mylangParser.T__19)
            self.state = 142
            self.argument()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_then_elseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(mylangParser.If_then_elseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def truth_val(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(mylangParser.Truth_valContext)
            else:
                return self.getTypedRuleContext(mylangParser.Truth_valContext,i)


        def endls(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(mylangParser.EndlsContext)
            else:
                return self.getTypedRuleContext(mylangParser.EndlsContext,i)


        def explist(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(mylangParser.ExplistContext)
            else:
                return self.getTypedRuleContext(mylangParser.ExplistContext,i)


        def tabs(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(mylangParser.TabsContext)
            else:
                return self.getTypedRuleContext(mylangParser.TabsContext,i)


        def PASS(self):
            return self.getToken(mylangParser.PASS, 0)

        def getRuleIndex(self):
            return mylangParser.RULE_if_then_else

        def enterRule(self, listener):
            if hasattr(listener, "enterIf_then_else"):
                listener.enterIf_then_else(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIf_then_else"):
                listener.exitIf_then_else(self)




    def if_then_else(self):
